fix: note grid alignment corrected

--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,7 @@
   background-color: black;
   position: relative;
   left: 50%;
-  top: 1px;
+  top: 1.5px;
   transform: translate(-50%, -50%);
 }
 
@@ -84,7 +84,7 @@
   grid-template-columns: 20px 20px 20px;
   grid-template-rows:
     12px repeat(4, 3px 11px) repeat(5, 3px 10px) 4px 11px
-    repeat(4, 3px 10px) repeat(4, 3px 11px) 3px;
+    repeat(4, 3px 10px) repeat(5, 3px 11px) 3px;
   position: absolute;
   top: 4.5rem;
   left: 50%;
